Added NineGridCanvas, Window closing events kind of work now, TestFixedModule attempts to reflect opened and closed windows (the former works without a hitch, the latter is rather inconsistent at the moment). Also PlexWindow animations :V

--- a/Start9_API/Start9.Api.csproj
+++ b/Start9_API/Start9.Api.csproj
@@ -57,6 +57,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objects\Controls\NineGridCanvas.cs" />
+    <Compile Include="Objects\Controls\VariableSizedWrapGrid.cs" />
+    <Compile Include="Objects\Controls\VariableSizedWrapGridView.cs" />
+    <Compile Include="Objects\ImageBrushNineGridConverter.cs" />
+    <Compile Include="Objects\NineGridImageBrush.cs" />
     <Compile Include="Tools\DpiManager.cs" />
     <Compile Include="Tools\Extensions.cs" />
     <Compile Include="Objects\IModule.cs" />
