--- a/Modules/TestTransientModule/TestTransientModule.csproj
+++ b/Modules/TestTransientModule/TestTransientModule.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\AppData\Roaming\Start9\Modules\</OutputPath>
+    <OutputPath>..\..\..\..\..\AppData\Roaming\Start9\Modules\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -59,6 +59,7 @@
     <ProjectReference Include="..\..\Start9_API\Start9.Api.csproj">
       <Project>{3fb2196c-bc3a-4875-bdb7-d417f8cba809}</Project>
       <Name>Start9.Api</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
