--- a/Start9_API/Start9.Api.csproj
+++ b/Start9_API/Start9.Api.csproj
@@ -57,24 +57,26 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Objects\Controls\NineGridCanvas.cs" />
-    <Compile Include="Objects\Controls\VariableSizedWrapGrid.cs" />
-    <Compile Include="Objects\Controls\VariableSizedWrapGridView.cs" />
+    <Compile Include="Controls\NineGridCanvas.cs" />
+    <Compile Include="Controls\VariableSizedWrapGrid.cs" />
+    <Compile Include="Controls\VariableSizedWrapGridView.cs" />
+    <Compile Include="Modules\Message.cs" />
     <Compile Include="Tools\DwmTools.cs" />
     <Compile Include="Objects\ImageBrushNineGridConverter.cs" />
     <Compile Include="Objects\NineGridImageBrush.cs" />
     <Compile Include="Tools\DpiManager.cs" />
     <Compile Include="Tools\Extensions.cs" />
-    <Compile Include="Objects\IModule.cs" />
-    <Compile Include="Objects\IProgramItem.cs" />
+    <Compile Include="Modules\Module.cs" />
+    <Compile Include="Programs\IProgramItem.cs" />
+    <Compile Include="Tools\WinApi.cs" />
     <Compile Include="Tools\MainTools.cs" />
     <Compile Include="Plex\PlexWindow.cs" />
-    <Compile Include="Objects\ProgramWindow.cs" />
+    <Compile Include="Programs\ProgramWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Plex\ShadowWindow.xaml.cs">
       <DependentUpon>ShadowWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Objects\WindowEventArgs.cs" />
+    <Compile Include="Programs\WindowEventArgs.cs" />
     <Compile Include="Tools\SystemPowerTools.cs" />
   </ItemGroup>
   <ItemGroup>
