Apparently pushing csproj counts for something...?

--- a/Modules/TestFixedModule/TestFixedModule.csproj
+++ b/Modules/TestFixedModule/TestFixedModule.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>$(userprofile)\AppData\Roaming\Start9\Modules\</OutputPath>
+    <OutputPath>..\..\..\..\..\AppData\Roaming\Start9\Modules\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
