--- a/Start9_API/Start9.Api.csproj
+++ b/Start9_API/Start9.Api.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Controls\CommandLinkButton.cs" />
     <Compile Include="Controls\NineGridCanvas.cs" />
     <Compile Include="Controls\Planerator.cs" />
+    <Compile Include="Controls\TaskItemGroup.cs" />
     <Compile Include="Controls\ToggleSwitch.cs" />
     <Compile Include="Controls\VariableSizedWrapGrid.cs" />
     <Compile Include="Controls\VariableSizedWrapGridView.cs" />
