--- a/Start9_API/Start9.Api.csproj
+++ b/Start9_API/Start9.Api.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\CommandLinkButton.cs" />
+    <Compile Include="Controls\IconButton.cs" />
     <Compile Include="Controls\NineGridCanvas.cs" />
     <Compile Include="Controls\Planerator.cs" />
     <Compile Include="Controls\TaskItemGroup.cs" />
