--- a/Start9/packages.config
+++ b/Start9/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net40" />
   <package id="Fluent.Ribbon" version="6.1.0.233" targetFramework="net40" />
   <package id="Start9.Api" version="1.0.0-CI00009" targetFramework="net40" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net40" />
 </packages>
