calculator -> books addin infrastructure

--- a/Start9/Start9.Host.csproj
+++ b/Start9/Start9.Host.csproj
@@ -145,5 +145,10 @@
       <Name>Start9.Host.AddInView</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="books.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
