IHost additions and ability to send messages to modules

--- a/Start9.Host.View/Start9.Host.View.csproj
+++ b/Start9.Host.View/Start9.Host.View.csproj
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IHost.cs" />
     <Compile Include="IConfiguration.cs">
       <SubType>Code</SubType>
     </Compile>
