--- a/Start9.Host.Adapter/Start9.Host.Adapter.csproj
+++ b/Start9.Host.Adapter/Start9.Host.Adapter.csproj
@@ -60,7 +60,7 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="Start9.Api.Contracts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Start9.Api.Contracts.1.0.0-CI00096\lib\net40\Start9.Api.Contracts.dll</HintPath>
+      <HintPath>..\packages\Start9.Api.Contracts.1.0.0-CI00100\lib\net40\Start9.Api.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="System.AddIn" />
     <Reference Include="System.AddIn.Contract, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -91,12 +91,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IHostContractToViewHostAdapter.cs" />
     <Compile Include="IConfigurationContractToViewHostAdapter.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IHostHostAdapter.cs" />
     <Compile Include="IConfigurationHostAdapter.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IHostViewToContractHostAdapter.cs" />
     <Compile Include="IConfigurationViewToContractHostAdapter.cs">
       <SubType>Code</SubType>
     </Compile>
