--- a/Start9/Start9.Host.csproj
+++ b/Start9/Start9.Host.csproj
@@ -36,6 +36,12 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NetworkModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NetworkView.1.0.0\lib\NetworkModel.dll</HintPath>
+    </Reference>
+    <Reference Include="NetworkUI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NetworkView.1.0.0\lib\NetworkUI.dll</HintPath>
+    </Reference>
     <Reference Include="Start9.Api, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Start9.Api.1.0.0-CI00109\lib\net40\Start9.Api.dll</HintPath>
     </Reference>
@@ -86,6 +92,9 @@
     <Reference Include="UIAutomationTypes">
       <Private>True</Private>
     </Reference>
+    <Reference Include="Utils, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NetworkView.1.0.0\lib\Utils.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase">
       <Private>True</Private>
     </Reference>
@@ -107,16 +116,25 @@
     </Compile>
     <Compile Include="ContractImpl.cs" />
     <Compile Include="Module.cs" />
-    <Compile Include="Pages\Home.xaml.cs">
+    <Compile Include="NodeControl\ConnectionViewModel.cs" />
+    <Compile Include="NodeControl\ConnectorType.cs" />
+    <Compile Include="NodeControl\ConnectorViewModel.cs" />
+    <Compile Include="NodeControl\CurvedArrow.cs" />
+    <Compile Include="NodeControl\MainWindowViewModel.cs" />
+    <Compile Include="NodeControl\MouseHandlingMode.cs" />
+    <Compile Include="NodeControl\NetworkViewModel.cs" />
+    <Compile Include="NodeControl\NodeViewModel.cs" />
+    <Compile Include="NodeControl\ScaleToPercentConverter.cs" />
+    <Compile Include="Views\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\MarketplaceTestPage.xaml.cs">
+    <Compile Include="Views\MarketplaceTestPage.xaml.cs">
       <DependentUpon>MarketplaceTestPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\ModuleTestsPage.xaml.cs">
+    <Compile Include="Views\ModuleTestsPage.xaml.cs">
       <DependentUpon>ModuleTestsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\PlexStylesTestPage.xaml.cs">
+    <Compile Include="Views\PlexStylesTestPage.xaml.cs">
       <DependentUpon>PlexStylesTestPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\MarketItem.xaml.cs">
@@ -155,19 +173,19 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Pages\Home.xaml">
+    <Page Include="Views\Home.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\MarketplaceTestPage.xaml">
+    <Page Include="Views\MarketplaceTestPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\ModuleTestsPage.xaml">
+    <Page Include="Views\ModuleTestsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\PlexStylesTestPage.xaml">
+    <Page Include="Views\PlexStylesTestPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -195,5 +213,6 @@
       <Name>Start9.Host.View</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
