--- a/Start9/Start9.Host.csproj
+++ b/Start9/Start9.Host.csproj
@@ -99,6 +99,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ContractImpl.cs" />
+    <Compile Include="Controls\MarketItem.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="NodeControl\ConnectionViewModel.cs" />
     <Compile Include="NodeControl\ConnectorType.cs" />
@@ -123,6 +124,9 @@
     </Compile>
     <Compile Include="UserControls\MarketItem.xaml.cs">
       <DependentUpon>MarketItem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\MarketWindow.xaml.cs">
+      <DependentUpon>MarketWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
@@ -176,6 +180,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Windows\MarketWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\SettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -208,7 +216,7 @@
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Start9.Api">
-      <Version>1.0.0-CI00109</Version>
+      <Version>1.0.0-CI00120</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
